--- a/docs/index.css
+++ b/docs/index.css
@@ -119,7 +119,7 @@ progress {
 
 .pt-3-half { padding-top: 1.4rem; }
 
-/* .node text {
+.node text {
   font: 14px robot;
   fill: #fff;
   font-weight: bold;
@@ -127,7 +127,7 @@ progress {
 
 .node text tspan {
   font-weight: normal;
-} */
+}
 
 .link {
   fill: none;
